packages/sci-cream/src/specs/snapshots/sci_cream__specs__chocolate__tests__compare_specs_chocolate_100_simple_vs_lindt.snap
---
source: packages/sci-cream/src/specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Lindt

Energy          20.70 pp  (Simple vs Lindt)
TotalFats        3.00 pp  (Simple vs Lindt)
CacaoSolids      0.00 pp  (Simple vs Lindt)
CocoaButter      3.00 pp  (Simple vs Lindt)
CocoaSolids      3.00 pp  (Simple vs Lindt)
TotalFiber       1.20 pp  (Simple vs Lindt)
TotalSugars      0.00 pp  (Simple vs Lindt)
TotalCarbohydrates   2.04 pp  (Simple vs Lindt)
OtherSNFS        0.00 pp  (Simple vs Lindt)
TotalSNFS        3.00 pp  (Simple vs Lindt)
TotalProteins    0.73 pp  (Simple vs Lindt)
TotalSolids      0.00 pp  (Simple vs Lindt)
Water            0.00 pp  (Simple vs Lindt)
POD              0.00 pp  (Simple vs Lindt)
PACsgr           0.00 pp  (Simple vs Lindt)
HF               2.70 pp  (Simple vs Lindt)
TotalPAC         0.00 pp  (Simple vs Lindt)
SaturatedFat     1.80 pp  (Simple vs Lindt)
TransFat         0.00 pp  (Simple vs Lindt)
