packages/sci-cream/src/specs/snapshots/sci_cream__specs__chocolate__tests__compare_specs_chocolate_95_simple_vs_lindt.snap
---
source: packages/sci-cream/src/specs/chocolate.rs
expression: "compare_compositions(&sources, COMPARABLE_CHOCOLATE_KEYS)"
---
sources: Simple, Lindt

Energy          15.11 pp  (Simple vs Lindt)
TotalFats        3.35 pp  (Simple vs Lindt)
CacaoSolids      0.00 pp  (Simple vs Lindt)
CocoaButter      3.35 pp  (Simple vs Lindt)
CocoaSolids      3.35 pp  (Simple vs Lindt)
Fiber            1.34 pp  (Simple vs Lindt)
TotalSugars      2.00 pp  (Simple vs Lindt)
TotalCarbohydrates   4.28 pp  (Simple vs Lindt)
OtherSNFS        2.00 pp  (Simple vs Lindt)
TotalSNFS        1.35 pp  (Simple vs Lindt)
TotalProteins    0.82 pp  (Simple vs Lindt)
TotalSolids      0.00 pp  (Simple vs Lindt)
Water            0.00 pp  (Simple vs Lindt)
POD              2.00 pp  (Simple vs Lindt)
PACsgr           2.00 pp  (Simple vs Lindt)
HF               3.02 pp  (Simple vs Lindt)
PACtotal         2.00 pp  (Simple vs Lindt)
SaturatedFat     2.01 pp  (Simple vs Lindt)
TransFat         0.00 pp  (Simple vs Lindt)
